--- a/css/styles.css
+++ b/css/styles.css
@@ -4,3 +4,26 @@
   background: #000;
   opacity: 0.001;
 }
+
+
+  h1 {
+  font-size:45px;
+  background-color:Orange;
+}
+
+
+  body {
+  background-color;DodgerBlue;
+
+}
+
+p {
+  font-size:20px;
+  color:SlateBlue;
+}
+
+p {
+  font-size:45px;
+  color:tomato;
+}
+
